--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,18 +12,24 @@
   <% end %>
 
   <div class="form-group">
-    <%= form.label :title, style: "display: block" %>
+  <div class="control-label col-sm-2">
+    <%= form.label :title %>
+    </div>
     <%= form.text_field :title %>
   </div>
 
   <div class="form-group">
-    <%= form.label :content, style: "display: block" %>
+  <div class="control-label col-sm-2">
+    <%= form.label :content %>
+    </div>
     <%= form.text_field :content %>
   </div>
 
   <div class="form-group">
-    <%= form.label :premium, style: "display: block" %>
-    <%= form.check_box :premium %>
+  <div class="control-label col-sm-2">
+    <%= form.label :premium, class: "checkbox-inline input_checkbox" %>
+    </div>
+    <%= form.check_box :premium, class: "checkbox" %>
   </div>
 
   <div class="form-group">
