--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -15,21 +15,27 @@
   <div class="control-label col-sm-2">
     <%= form.label :title %>
     </div>
+    <div class="col-sm-6">
     <%= form.text_field :title %>
+    </div>
   </div>
 
   <div class="form-group">
   <div class="control-label col-sm-2">
     <%= form.label :content %>
     </div>
+    <div class="col-sm-6">
     <%= form.text_field :content %>
+    </div>
   </div>
 
   <div class="form-group">
   <div class="control-label col-sm-2">
     <%= form.label :premium, class: "checkbox-inline input_checkbox" %>
     </div>
+    <div class="col-sm-6">
     <%= form.check_box :premium, class: "checkbox" %>
+    </div>
   </div>
 
   <div class="form-group">
