--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,7 +16,7 @@
     <%= form.label :title %>
     </div>
     <div class="col-sm-6">
-    <%= form.text_field :title %>
+    <%= form.text_field :title, class: "form-control", autofocus: true %>
     </div>
   </div>
 
@@ -25,7 +25,7 @@
     <%= form.label :content %>
     </div>
     <div class="col-sm-6">
-    <%= form.text_field :content %>
+    <%= form.text_field :content, class: "form-control", autofocus: true %>
     </div>
   </div>
 
