--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -23,8 +23,8 @@
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
        
-        <li class="nav-item d-inline-flex "><i class="flag flag-england "></i><%= link_to 'English', root_path(locale: :en), class: "nav-link" %></li>
-        <li class="nav-item d-inline-flex "><i class="flag flag-tanzania "></i><%= link_to 'Swahili', root_path(locale: :sw), class: "nav-link" %></li>
+        <li class="nav-item d-flex align-items-center justify-content-start"><i class="flag flag-england "></i><%= link_to 'English', root_path(locale: :en), class: "nav-link" %></li>
+        <li class="nav-item d-flex align-items-center justify-content-start"><i class="flag flag-tanzania "></i><%= link_to 'Swahili', root_path(locale: :sw), class: "nav-link" %></li>
        
   </div>
     </div>
