--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,13 +2,17 @@
 
 <h1>Posts</h1>
 
-<div id="posts">
+<%= link_to "New post", new_post_path, class: "btn btn-primary"%>
+<hr>
+<div id="posts" class="row">
   <% @posts.each do |post| %>
+  <div class="col-12 col-lg-3 col-md-6">
     <%= render post %>
+  
     <p>
       <%= link_to "Show this post", post %>
     </p>
+    </div>
   <% end %>
 </div>
 
-<%= link_to "New post", new_post_path %>
