--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,11 +7,12 @@
 <div id="posts" class="row">
   <% @posts.each do |post| %>
   <div class="col-12 col-lg-3 col-md-6">
-    <%= render post %>
-  
-    <p>
-      <%= link_to "Show this post", post %>
-    </p>
+    <div class="card">
+      <%= render post %>
+      <p>
+        <%= link_to "Show this post", post %>
+      </p>
+      </div>
     </div>
   <% end %>
 </div>
