--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -1,19 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <%= link_to 'Viatsy', root_path, class: "navbar-brand" %>
+    <%= link_to t('global.menu.home'), root_path, class: "navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-        <%= link_to t('global.menu.home'), root_path, class: "nav-link active" %>
-        </li>
-        <li class="nav-item">
           <%= link_to t('global.menu.feedback'), new_feedback_path, class: "nav-link active" %>
         </li>
         <li class="nav-item">
           <%= link_to 'Posts', posts_path, class: "nav-link active" %>
+        </li>
+      
+        <li class="nav-item">
+          <%= link_to '|', '#', class: "nav-link active" %>
+        </li>
+        <li class="nav-item">
+          <span class="nav-link active" >Plan: <span>
+        </li>
+        <li class="nav-item">
+           <span class="nav-link active" >Subscription Status: <%= current_user.subscription_status %> <span>
         </li>
       </ul>
    <div class="navbar-nav">
