Add stripe customer id

--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -17,18 +17,17 @@
           <%= link_to '|', '#', class: "nav-link active" %>
         </li>
         <li class="nav-item">
-          <span class="nav-link active" >Plan: <span>
+          <span class="nav-link active text-success" >Plan: <span>
         </li>
         <li class="nav-item">
-           <span class="nav-link active" >Subscription Status: <%= current_user.subscription_status if user_signed_in? %> <span>
+           <span class="nav-link active " >Subscription Status:  <%= current_user.subscription_status  if user_signed_in? %> <span>
+        </li>
+        <li class="nav-item">
+           <span class="nav-link active text-success" >Stripe customerId: <%= current_user.stripe_customer_id if user_signed_in? %> <span>
         </li>
       </ul>
    <div class="navbar-nav">
-      
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+
        
         <li class="nav-item d-flex align-items-center justify-content-start"><i class="flag flag-england "></i><%= link_to 'English', root_path(locale: :en), class: "nav-link" %></li>
         <li class="nav-item d-flex align-items-center justify-content-start"><i class="flag flag-tanzania "></i><%= link_to 'Swahili', root_path(locale: :sw), class: "nav-link" %></li>
