--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -6,11 +6,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Menu
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><%= link_to t('global.menu.feedback'), new_feedback_path, class: "dropdown-item" %></li>
+            <li><%= link_to 'Posts', posts_path, class: "dropdown-item" %></li>
+            
+          </ul>
+        
         <li class="nav-item">
-          <%= link_to t('global.menu.feedback'), new_feedback_path, class: "nav-link active" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Posts', posts_path, class: "nav-link active" %>
+          <%= link_to 'Pricing', pricing_path, class: "nav-link active" %>
         </li>
       
         <li class="nav-item">
