--- a/app/views/static_pages/pricing.html.erb
+++ b/app/views/static_pages/pricing.html.erb
@@ -3,7 +3,7 @@
    <div class="col-sm-3">
        <div class="card">
          <div class="card-body">
-           <h5 class="card-title">Plan</h5>
+           <h5 class="card-title">Trial</h5>
            <p class="card-text">Free</p>
            <a href="#" class="btn btn-primary">Go somewhere</a>
          </div>
@@ -13,7 +13,7 @@
      <div class="col-sm-3">
        <div class="card">
          <div class="card-body">
-           <h5 class="card-title">Plan</h5>
+           <h5 class="card-title"><%= price.product.name %> product</h5>
            <p class="card-text "><span class="text-danger"><%= price.unit_amount/100 %></span><%= price.currency %> per <%= price.recurring.interval %></p>
            <a href="#" class="btn btn-primary">Go somewhere</a>
          </div>
