--- a/app/views/static_pages/pricing.html.erb
+++ b/app/views/static_pages/pricing.html.erb
@@ -1,6 +1,7 @@
 <div class="container mt-2" align="center">
+   <h1 class="display-4 text-align-center">Pricing</h1>
    <div class="row">
-   <div class="col-sm-3">
+   <div class="col-sm-4">
        <div class="card">
          <div class="card-body">
            <h5 class="card-title">Trial</h5>
@@ -10,7 +11,7 @@
        </div>
      </div>
       <% @pricing.each do |price| %>
-     <div class="col-sm-3">
+     <div class="col-sm-4">
        <div class="card">
          <div class="card-body">
            <h5 class="card-title"><%= price.product.name %> product</h5>
